--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -23,4 +23,22 @@ jobs:
           echo "The target branch of a pull request: ${{ steps.branch-names.outputs.base_ref_branch }}"
           echo "The source branch of a pull request: ${{ steps.branch-names.outputs.head_ref_branch }}"
           echo "The branch that triggered the workflow run: ${{ steps.branch-names.outputs.ref_branch }}"
-          echo "The tag that triggered the workflow run: "${{ steps.tag.outputs.tag }}
+          echo "The tag that triggered the workflow run: "${{ steps.branch-names.outputs.tag }}
+    
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get branch names post-checkout
+        id: branch-names-2
+        uses: tj-actions/branch-names@v8
+
+      - name: show-output-2
+        run: |
+          echo "Running on default branch? ${{ steps.branch-names-2.outputs.is_default }}"
+          echo "Running on a tag? ${{ steps.branch-names-2.outputs.is_tag }}"
+          echo "Default branch name is: ${{ steps.branch-names-2.outputs.default_branch }}"
+          echo "The current branch name regardless of event_type: ${{ steps.branch-names-2.outputs.current_branch }}"
+          echo "The target branch of a pull request: ${{ steps.branch-names-2.outputs.base_ref_branch }}"
+          echo "The source branch of a pull request: ${{ steps.branch-names-2.outputs.head_ref_branch }}"
+          echo "The branch that triggered the workflow run: ${{ steps.branch-names-2.outputs.ref_branch }}"
+          echo "The tag that triggered the workflow run: "${{ steps.branch-names-2.outputs.tag }}
