--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -8,7 +8,8 @@ on:
 jobs:
   get_branch_info:
     runs-on: ubuntu-latest
-
+    outputs:
+      branch: ${{ steps.branch-name.outputs.branch }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,13 +33,14 @@ jobs:
         id: branch-name
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
-          branch=${raw##*/}
-          echo "branch=$branch" >> $GITHUB_OUTPUT
+          echo "raw="
+          branch="$(echo ${raw//orign\//} | tr -d '\n')"
+          echo "{name}=branch" >> $GITHUB_OUTPUT
           echo "Branch is $branch."
 
   use_branch_name:
     runs-on: ubuntu-latest
-    needs: ['get_branch_info']
+    needs: get_branch_info
 
     steps:
       - run: |
