fix echo of raw

--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -33,7 +33,7 @@ jobs:
         id: branch-name
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
-          echo "raw="
+          echo "raw=$raw"
           branch="$(echo ${raw//orign\//} | tr -d '\n')"
           echo "{name}=branch" >> $GITHUB_OUTPUT
           echo "Branch is $branch."
