--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -31,9 +31,9 @@ jobs:
 
       - name: base_ref vs event.base_ref
         run: |
-          echo "github.base_ref = ${{ github.base_ref }}
+          echo "github.base_ref = ${{ github.base_ref }}"
           echo "github.event.base_ref = ${{ github.event.base_ref }}"
-          
+
       - name: Get current branch
         id: branch-name
         run: |
