fix adding of branch variable to GITHUB_OUTPUT

--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -40,7 +40,7 @@ jobs:
           raw=$(git branch -r --contains ${{ github.ref }})
           echo "raw=$raw"
           branch="$(echo ${raw//origin\//} | tr -d '\n')"
-          echo "{name}=branch" >> $GITHUB_OUTPUT
+          echo "branch=$branch" >> $GITHUB_OUTPUT
           echo "Branch is $branch."
 
   use_branch_name:
