--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -41,14 +41,6 @@ jobs:
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
           echo "raw=$raw"
-          branch="$(echo ${raw//origin\//} | tr -d '\n')"
+          branch="$(echo ${raw//origin\//} | tr -d '\n' | sort -u)"
           echo "branch=$branch" >> $GITHUB_OUTPUT
           echo "Branch is $branch."
-
-  use_branch_name:
-    runs-on: ubuntu-latest
-    needs: get_branch_info
-
-    steps:
-      - run: |
-          echo "Branch from other job: ${{ needs.get_branch_info.outputs.branch }}"
