do not try to output "raw" version of branches/tags

--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -57,8 +57,9 @@ jobs:
     steps:
     - name: "Display Branch and Tag names"
       run: |
-        echo "Branches: ${{fromJson(needs.branch-names.outputs.branches)}}"
+        printf "Branches (raw): %s" '${{fromJson(needs.branch-names.outputs.branches)}}'
+        printf "Branches: %s" '${{fromJson(needs.branch-names.outputs.branches)}}'
         echo "Tag: ${{needs.branch-names.outputs.tag}}"
         echo "Tag Num: ${{needs.branch-names.outputs.tag_num}}"
         echo "Is Tag: ${{needs.branch-names.outputs.is_tag}}"
-        echo "Tags: ${{fromJson(needs.branch-names.outputs.tags)}}"
+        printf "Tags: %s" '${{fromJson(needs.branch-names.outputs.tags)}}'
