--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -64,3 +64,19 @@ jobs:
         echo "Is Tag: ${{needs.branch-names.outputs.is_tag}}"
         printf "Tags (raw): %s\n" '${{needs.branch-names.outputs.tags}}'
         printf "Tags: %s\n" '${{fromJson(needs.branch-names.outputs.tags)}}'
+
+  gate-on-tag:
+    name: "CD - Gate on Tag"
+    runs-on: ubuntu-latest
+    needs: branch-names
+    if: ${{ needs.branch-names.outputs.is_tag == 'true' }} && ${{startsWith(needs.branch-names.outputs.tag, 'v')}}
+    steps:
+    - name: "Display Branch and Tag names"
+      run: |
+        printf "Branches (raw): %s\n" '${{needs.branch-names.outputs.branches}}'
+        printf "Branches: %s\n" '${{fromJson(needs.branch-names.outputs.branches)}}'
+        echo "Tag: ${{needs.branch-names.outputs.tag}}"
+        echo "Tag Num: ${{needs.branch-names.outputs.tag_num}}"
+        echo "Is Tag: ${{needs.branch-names.outputs.is_tag}}"
+        printf "Tags (raw): %s\n" '${{needs.branch-names.outputs.tags}}'
+        printf "Tags: %s\n" '${{fromJson(needs.branch-names.outputs.tags)}}'
