--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -19,7 +19,7 @@ jobs:
       # Ref is a tag
       is_tag: ${{ steps.tag.outputs.is_tag }}
       # Ref is a semver tag
-      is_semverf: ${{ steps.tag.outputs.is_semver }}
+      is_semver: ${{ steps.tag.outputs.is_semver }}
       # Tags (if more than one), for the ref. Applies whether or not the ref is a tag.
       tags: ${{ steps.tag.outputs.tags }}
     steps:
@@ -78,7 +78,7 @@ jobs:
     name: "CD - Gate on Tag"
     runs-on: ubuntu-latest
     needs: branch-names
-    if: needs.branch-names.outputs.is_tag && startsWith(needs.branch-names.outputs.tag, 'v')
+    if: needs.branch-names.outputs.is_tag && needs.branch-names.outputs.is_semver
     steps:
     - name: "Display Branch and Tag names"
       run: |
