--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -28,6 +28,10 @@ jobs:
           fetch-depth: 0
       - id: branch-names
         run: |
+          echo "github.ref = ${{github.ref }}"
+          echo "github.sha = ${{ github.sha }}"
+          echo "github.head_ref = ${{ github.head_ref }}"
+          echo "github.base_ref = ${{ github.base_ref }}"
           raw=$(git branch -r --contains ${{ github.ref }})
           echo "raw=$raw"
           branches=$(echo "$raw" | sed -E -e 's/^[ ]+//; s,origin/,,; s/^/"/; s/$/",/; 1s/^/[/; $s/,/]/;' | tr -d '\n')
