--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -33,7 +33,7 @@ jobs:
           echo "github.sha = ${{ github.sha }}"
           echo "github.head_ref = ${{ github.head_ref }}"
           echo "github.base_ref = ${{ github.base_ref }}"
-          raw=$(git branch -r --contains ${{ github.ref }})
+          raw=$(git branch -r --contains ${{ github.sha }})
           echo "raw=$raw"
           branches=$(echo "$raw" | sed -E -e 's/^[ ]+//; s,origin/,,; s/^/"/; s/$/",/; 1s/^/[/; $s/,/]/;' | tr -d '\n')
           echo "branches='$branches'" >> $GITHUB_OUTPUT
