--- a/.github/workflows/determine-branch.yaml
+++ b/.github/workflows/determine-branch.yaml
@@ -74,12 +74,13 @@ jobs:
         echo "Is Semver: ${{needs.branch-names.outputs.is_semver}}"
         printf "Tags (raw): %s\n" '${{needs.branch-names.outputs.tags}}'
         printf "Tags: %s\n" '${{fromJson(needs.branch-names.outputs.tags)}}'
+        echo "github.ref_protected: ${{github.ref_protected}}"
 
   gate-on-tag:
     name: "CD - Gate on Tag"
     runs-on: ubuntu-latest
     needs: branch-names
-    if: fromJSON(needs.branch-names.outputs.is_semver)
+    if: github.ref_protected == 'true' && needs.branch-names.outputs.is_semver == 'true'
     steps:
     - name: "Display Branch and Tag names"
       run: |
